# CRUD_task_management

./: README.md  main.py  pyproject.toml
app/: README.md  main.py  pyproject.toml
app/config/: db.py
app/constants/: action_type_constant.py  status_constant.py
app/migrations/: env.py
app/models/: task.py  task_history.py
app/schemas/: task_create.py  task_history_update.py  task_log.py  task_search_by_criteria.py
app/services/: create_task_service.py  delete_task_service.py  get_all_task_service.py  get_task_by_criteria_service.py  get_task_history_by_criteria_service.py  get_task_history_service.py  post_task_history_service.py  undo_action_service.py  update_task_history_service.py  update_task_service.py
app/utils/: app_exceptions.py  service_result.py
app/views/: task.py
config/: config.py
constants/: datetime.py
constants/schema/: status.py
helper_funcs/: save_action_to_log.py
migrations/: env.py
models/: task.py  task_history.py
models/responses/: delete_item.py  get_all.py  (+2 more)
schemas/: task.py  task_create.py  task_history_search_by_criteria.py  task_log.py  task_search_by_criteria.py  task_update.py
serializers/: task.py
services/: create_task_service.py  delete_task_service.py  get_all_task_service.py  get_task_by_criteria_service.py  get_task_history.py  get_task_history_by_criteria_service.py  post_task_history_service.py  undo_action_service.py  update_task_history_service.py  update_task_service.py
tests/: test_update_task_service.py
utils/: app_exceptions.py  request_exceptions.py  service_result.py
views/: task.py
(+4 files in other folders)
