[tool.poetry]
name = "strike-social-task-management"
version = "0.1.0"
description = ""
authors = ["NCJ0 <nichotipong@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.0"
sqlalchemy = "^2.0.20"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
